--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,14 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/src/Corsinvest.ProxmoxVE.Diagnostic/bin/Debug/netcoreapp3.1/cv4pve-diag.dll",
-            "args": [],
+            "args": [
+                "--host",
+                "10.92.90.91",
+                "--username",
+                "test",
+                "--password",
+                "test"
+            ],
             "cwd": "${workspaceFolder}/src/Corsinvest.ProxmoxVE.Diagnostic",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
