--- a/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
+++ b/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>cv4pve-diag</AssemblyName>
     <Company>Corsinvest Srl</Company>
@@ -20,9 +20,9 @@
     <TrimmerRootAssembly Include="System.Net.WebClient" />
 
     <!-- <ProjectReference Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Shell\Corsinvest.ProxmoxVE.Api.Shell.csproj" /> -->
-    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="2.4.0" />
+    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="2.5.3" />
 
     <!-- <ProjectReference Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" /> -->
-    <PackageReference Include="Corsinvest.ProxmoxVE.Diagnostic.Api" Version="1.2.0" />
+    <PackageReference Include="Corsinvest.ProxmoxVE.Diagnostic.Api" Version="1.3.0" />
   </ItemGroup>
 </Project>
