--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,16 +11,7 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/src/Corsinvest.ProxmoxVE.Diagnostic/bin/Debug/netcoreapp3.1/cv4pve-diag.dll",
-            "args": [
-                "--host",
-                "10.92.90.91",
-                "--username",
-                "test",
-                "--password",
-                "test",
-                "--output",
-                "text"
-            ],
+            "args": [],
             "cwd": "${workspaceFolder}/src/Corsinvest.ProxmoxVE.Diagnostic",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
