--- a/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
+++ b/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Version>1.4.0</Version>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Version>1.4.1</Version>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>cv4pve-diag</AssemblyName>
     <Company>Corsinvest Srl</Company>
     <Authors>Daniele Corsini</Authors>
@@ -10,19 +10,14 @@
     <Product>Corsinvest for Proxmox VE Diagnostic</Product>
     <AssemblyTitle>Corsinvest for Proxmox VE Diagnostic</AssemblyTitle>
     <Description>Corsinvest for Proxmox VE Diagnostic</Description>
-    <ApplicationIcon />
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- Fix RedHat, Centos,Fedora -->
-    <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
-
-    <TrimmerRootAssembly Include="System.Net.WebClient" />
-
     <!-- <ProjectReference Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Shell\Corsinvest.ProxmoxVE.Api.Shell.csproj" /> -->
-    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="2.8.0" />
+    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="3.1.1" />
 
     <!-- <ProjectReference Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" /> -->
-    <PackageReference Include="Corsinvest.ProxmoxVE.Diagnostic.Api" Version="1.5.0" />
+    <PackageReference Include="Corsinvest.ProxmoxVE.Diagnostic.Api" Version="1.5.1" />
   </ItemGroup>
 </Project>
