--- a/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
+++ b/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Version>1.4.1</Version>
+    <Version>1.4.2</Version>
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>cv4pve-diag</AssemblyName>
     <Company>Corsinvest Srl</Company>
@@ -10,14 +10,22 @@
     <Product>Corsinvest for Proxmox VE Diagnostic</Product>
     <AssemblyTitle>Corsinvest for Proxmox VE Diagnostic</AssemblyTitle>
     <Description>Corsinvest for Proxmox VE Diagnostic</Description>
+    <RepositoryUrl>https://github.com/Corsinvest/cv4pve-diag</RepositoryUrl>
+    <RepositoryType>Github</RepositoryType>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <PredefinedCulturesOnly>false</PredefinedCulturesOnly>
   </PropertyGroup>
 
   <ItemGroup>
     <!-- <ProjectReference Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Shell\Corsinvest.ProxmoxVE.Api.Shell.csproj" /> -->
-    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="3.1.1" />
+    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="7.3.4" />
 
     <!-- <ProjectReference Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" /> -->
-    <PackageReference Include="Corsinvest.ProxmoxVE.Diagnostic.Api" Version="1.5.1" />
+    <PackageReference Include="Corsinvest.ProxmoxVE.Diagnostic.Api" Version="1.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 </Project>
