- Updates program and args in launch.json for cv4pve-diag.dll file - Updates cv4pve-diag tool with new diagnostic features and usage instructions, as well as a new website link - Refactors code by updating Subscription Status check to use ToLower() method and retrieving ExtensionData values using a LINQ query - Updates Corsinvest package version to 1.5.8 and adds GenerateDocumentationFile property to csproj file - Updates package references and target framework in project file to make it compatible with new changes - Refactors code by adding new options and replacing existing ones, and updates file writing and console output for improved readability and maintainability.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/Corsinvest.ProxmoxVE.Diagnostic/bin/Debug/net6.0/cv4pve-diag.dll",
-            "args": [],
+            "program": "${workspaceFolder}/src/Corsinvest.ProxmoxVE.Diagnostic/bin/Debug/net7.0/cv4pve-diag.dll",
+            "args": ["@Parm1.Parm"],
             "cwd": "${workspaceFolder}/src/Corsinvest.ProxmoxVE.Diagnostic",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
