--- a/src/Corsinvest.ProxmoxVE.Diagnostic.Api/Corsinvest.ProxmoxVE.Diagnostic.Api.csproj
+++ b/src/Corsinvest.ProxmoxVE.Diagnostic.Api/Corsinvest.ProxmoxVE.Diagnostic.Api.csproj
@@ -1,24 +1,33 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <OutputType>Library</OutputType>
 
-    <Version>1.5.6</Version>
+    <Version>1.5.8</Version>
     <Company>Corsinvest Srl</Company>
-    <Authors>Daniele Corsini</Authors>
-    <Copyright>Corsinvest Srl</Copyright>
+    <Authors>Corsinvest Srl</Authors>
+    <Copyright>Corsinvest
+      Srl</Copyright>
     <Product>Corsinvest for Proxmox VE Diagnostic Api</Product>
-    <AssemblyTitle>Corsinvest for Proxmox VE Diagnostic Api</AssemblyTitle>
+    <AssemblyTitle>Corsinvest for Proxmox VE
+      Diagnostic Api</AssemblyTitle>
     <Description>Corsinvest for Proxmox VE Diagnostic Api</Description>
-		<PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
-
     <PackageProjectUrl>https://github.com/Corsinvest/cv4pve-diag</PackageProjectUrl>
     <PackageTags>ProxmoxVE;Api,Client;Rest;Corsinvest;Diagnostic</PackageTags>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+    <PackageOutputPath>..\..\..\.nupkgs\</PackageOutputPath>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageIcon>icon.png</PackageIcon>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <RepositoryUrl>https://github.com/Corsinvest/cv4pve-diag</RepositoryUrl>
     <RepositoryType>Github</RepositoryType>
+    <RepositoryUrl>https://github.com/Corsinvest/cv4pve-diag</RepositoryUrl>
+
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <!-- Include symbol files (*.pdb) in the built .nupkg -->
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>
+      $(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
@@ -30,7 +39,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- <ProjectReference Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Extension\Corsinvest.ProxmoxVE.Api.Extension.csproj" /> -->
-    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Extension" Version="7.3.6" />
+    <!-- <ProjectReference
+    Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Extension\Corsinvest.ProxmoxVE.Api.Extension.csproj"
+		/> -->
+    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Extension" Version="7.4.0" />
   </ItemGroup>
 </Project>
