--- a/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
+++ b/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Version>1.4.4</Version>
-    <TargetFramework>net6.0</TargetFramework>
+    <Version>1.4.5</Version>
+    <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>cv4pve-diag</AssemblyName>
     <Company>Corsinvest Srl</Company>
     <Authors>Daniele Corsini</Authors>
@@ -18,14 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="7.4.0" />
     <!-- <ProjectReference Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Shell\Corsinvest.ProxmoxVE.Api.Shell.csproj" /> -->
-    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="7.3.6" />
 
-    <!-- <ProjectReference Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" /> -->
-    <PackageReference Include="Corsinvest.ProxmoxVE.Diagnostic.Api" Version="1.5.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
+    <ProjectReference
+      Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" />
+    <!-- <PackageReference Include="Corsinvest.ProxmoxVE.Diagnostic.Api" Version="1.5.5" /> -->
   </ItemGroup>
 </Project>
