--- a/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
+++ b/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Version>1.4.5</Version>
+    <Version>1.4.6</Version>
     <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>cv4pve-diag</AssemblyName>
     <Company>Corsinvest Srl</Company>
@@ -18,11 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="7.4.0" />
-    <!-- <ProjectReference Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Shell\Corsinvest.ProxmoxVE.Api.Shell.csproj" /> -->
+    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="7.4.3" />
+    <!-- <ProjectReference
+      Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Shell\Corsinvest.ProxmoxVE.Api.Shell.csproj" /> -->
 
     <ProjectReference
       Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" />
-    <!-- <PackageReference Include="Corsinvest.ProxmoxVE.Diagnostic.Api" Version="1.5.5" /> -->
   </ItemGroup>
 </Project>
