--- a/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
+++ b/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Version>1.5.1</Version>
+    <Version>1.5.2</Version>
     <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>cv4pve-diag</AssemblyName>
     <Company>Corsinvest Srl</Company>
@@ -18,11 +18,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="8.2.0" />
+    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="8.2.2" />
     <!-- <ProjectReference
     Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Shell\Corsinvest.ProxmoxVE.Api.Shell.csproj"
     /> -->
-    <ProjectReference
-      Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" />
+    <ProjectReference Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" />
   </ItemGroup>
 </Project>
