--- a/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
+++ b/src/Corsinvest.ProxmoxVE.Diagnostic/Corsinvest.ProxmoxVE.Diagnostic.csproj
@@ -1,28 +1,20 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Version>1.7.0</Version>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <AssemblyName>cv4pve-diag</AssemblyName>
-    <Company>Corsinvest Srl</Company>
-    <Authors>Daniele Corsini</Authors>
-    <Copyright>Corsinvest Srl</Copyright>
     <Product>Corsinvest for Proxmox VE Diagnostic</Product>
     <AssemblyTitle>Corsinvest for Proxmox VE Diagnostic</AssemblyTitle>
     <Description>Corsinvest for Proxmox VE Diagnostic</Description>
-    <RepositoryUrl>https://github.com/Corsinvest/cv4pve-diag</RepositoryUrl>
-    <RepositoryType>Github</RepositoryType>
-    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <InvariantGlobalization>true</InvariantGlobalization>
     <PredefinedCulturesOnly>false</PredefinedCulturesOnly>
+    <RepositoryUrl>https://github.com/Corsinvest/cv4pve-diag</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Shell" Version="8.3.3" />
-    <!-- <ProjectReference
-    Include="..\..\..\cv4pve-api-dotnet\src\Corsinvest.ProxmoxVE.Api.Shell\Corsinvest.ProxmoxVE.Api.Shell.csproj"
-    /> -->
-    <ProjectReference
-      Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" />
+    <PackageReference Include="Corsinvest.ProxmoxVE.Api.Console" />
+
+    <ProjectReference Include="..\Corsinvest.ProxmoxVE.Diagnostic.Api\Corsinvest.ProxmoxVE.Diagnostic.Api.csproj" />
   </ItemGroup>
 </Project>
